src/golden/objects/typeerrors/test.golden/mismatchedudd.ut
	data ObjA udd <- ObjB.make